Hide breadcrumbs on small screens. Fix footer padding

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -10,10 +10,7 @@
   background-color: $footer-bg;
   color: $footer-text;
   padding-top: $footer-padding-top;
-
-  @media (max-width: $screen-md-max) {
-    padding-top: 0;
-  }
+  padding: $footer-padding-top 5px 5px 5px;
 
   h5, h6 {
     font-weight: bold;
